# arkhamdb-json-data

./: .gitignore  pyproject.toml
pack/dwl/: bota.json  tece_encounter.json  tmm_encounter.json  uau_encounter.json
pack/parallel/: rtr_encounter.json
pack/return/: rtnotz_encounter.json  rtptc_encounter.json
pack/side/: lol_encounter.json
pack/tcu/: bbt_encounter.json  fgg_encounter.json  icc_encounter.json  tcu_encounter.json  tsn_encounter.json  uad_encounter.json  wos_encounter.json
pack/tde/: tsh_encounter.json
pack/tfa/: tbb.json
pack/tic/: def_encounter.json  itm_encounter.json  lif_encounter.json
pack/tsk/: tskc.json
source/: dev.ipynb  main.py  validate_features.py
source/common/: consts.py  optimization.py  utils.py
source/subsets/: generate_subsets.py  utils.py
subsets/: encounter_subset.json  generate_subsets.py  player_subset.json  utils.py
