[tool.poetry]
name = "arkhamdb"
version = "0.1.0"
description = "arkham horror db"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python =  "~3.10"
jsonschema = {version = "^4.18.4"}
jmespath = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
